<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">AppMe</string>
    <string name="app_receiver_service_description">This allows droidVNC-NG to post input events to the Android operating system, thus allowing remote control from a connected VNC viewer. All entered input is directly posted to Android, no input is logged, saved or shared.</string>
    <string name="about_app">About Cache Cleaner</string>
    <string name="about_page_description" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vehicula ligula tortor, in pellentesque dui congue ac. Vestibulum lacinia urna magna, quis cursus ante iaculis nec. Nunc ut ligula sit amet odio ultrices euismod vel vel purus. Sed lacus mauris, aliquam et placerat id</string>
    <string name="about_contact_us">Contact us</string>
    <string name="about_instagram">Follow us on Instagram</string>
    <string name="about_facebook">Like us on Facebook</string>
    <string name="about_play_store">Rate us on the Play Store</string>
    <string name="about_youtube">Watch us on Youtube</string>
    <string name="about_twitter">Follow us on Twitter</string>
    <string name="about_github">Fork us on GitHub</string>
    <string name="about_website">Visit our website</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="author">Author</string>
    <string name="version_number">Version number</string>
    <string name="author_name" translatable="false">AndroWeb Developers</string>
    <string name="action_clean">Clean</string>
    <string name="action_rescan">Rescan</string>
    <string name="action_search">Search</string>
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_size">Sort by size</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_menu_screen">Menu</string>
    <string name="action_start_service">Start</string>
    <string name="action_stop_service">Stop</string>
    <string name="action_start_record">Screen Record</string>
    <string name="action_stop_record">Stop Recording</string>
    <string name="action_screen_play">Screen Play</string>
    <string name="action_screen_shot">Screen Shot</string>
    <string name="action_screen_record">Screen Record</string>
    <string name="action_screen_share">Screen Share</string>
    <string name="software_top_text">Total App: %1$s , Total Size: %2$s</string>
    <string name="menu_info">Properties</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_uninstall">Uninstall</string>
    <string name="menu_open">Open</string>
    <string name="menu_share">Share</string>
    <string name="menu_open_playstore">Play Store</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="bluetooth">Share</string>
    <string name="no_app_found">No App Founds</string>
    <string name="folder_open_file_with_">Open With..</string>
    <string name="apps_list_header_title">Device memory</string>
    <string name="apps_list_header_used_prefix">Used</string>
    <string name="apps_list_header_cache_prefix">Cache</string>
    <string name="apps_list_header_free_prefix">Free</string>
    <string name="apps_list_header_footer">App cache usage</string>
    <string name="apps_list_header_memory"><xliff:g id="memory">%1$s</xliff:g></string>
    <string name="empty_cache">Cache is empty.</string>
    <string name="no_such_app">No such application.</string>
    <string name="scanning">Scanning…</string>
    <string name="scanning_m_of_n">Scanning %1$d/%2$d</string>
    <string name="cleaning_cache">Cleaning cache</string>
    <string name="cleaning_in_progress">Cleaning in progress…</string>
    <string name="cleaned">Cache cleaned</string>
    <string name="toast_could_not_clean">Could not clean the cache</string>
    <string name="toast_could_not_clean_reason">Could not clean the cache: %1$s</string>
    <string name="settings">Settings</string>
    <string name="main_preferences">Main preferences</string>
    <string name="about">About</string>
    <string name="clean_on_app_startup">Clean on app startup</string>
    <string name="clean_on_app_startup_summary">Automatically clean cache on application startup</string>
    <string name="clean_on_app_startup_key" translatable="false">clean_on_app_startup</string>
    <string name="exit_after_clean">Exit after clean up</string>
    <string name="exit_after_clean_summary">Exit after Clean button is clicked and clean up is completed</string>
    <string name="exit_after_clean_key" translatable="false">exit_after_clean</string>
    <string name="clean_on_system_startup">Clean on system startup</string>
    <string name="clean_on_system_startup_summary">Automatically clean cache on system startup</string>
    <string name="clean_on_system_startup_key" translatable="false">clean_on_device_startup</string>
    <string name="version_number_unknown">Unknown</string>
    <string name="open_source_licences">Open source licences</string>
    <string name="special_thanks">Special thanks</string>
    <string name="samuels_graphics" translatable="false">Samuel\'s Graphics</string>
    <string name="samuels_graphics_desc">Icon and Play Store banner design</string>
    <string name="sort_by_key" translatable="false">sort_by</string>
    <string name="rationale_title">Insufficient permissions</string>
    <string name="rationale_storage">Storage permission is needed to clean external cache.</string>
    <string name="app_loading">Loading applications</string>
    <string name="app_is_system">System app</string>
    <string name="app_uninstall">Uninstall</string>
    <string name="app_view_in_settings">View in settings</string>
    <string name="app_permissions">Uses permissions</string>
    <string name="app_require_no_permission">No permission required</string>
    <string name="app_activities">Activities</string>
    <string name="app_launch">Launch</string>
    <string name="app_unsupported">Unsupported</string>
    <string name="app_refresh">Refresh</string>
    <string name="app_no_activities">No activities</string>
    <string name="app_receivers">Receivers</string>
    <string name="app_no_receivers">No receivers</string>
    <string name="app_providers">Providers</string>
    <string name="app_no_providers">No providers</string>
    <string name="app_launch_mode">Launch mode</string>
    <string name="app_taskAffinity">Task affinity</string>
    <string name="app_installation">Installation</string>
    <string name="app_update">Update</string>
    <string name="app_authority">Authority</string>
    <string name="app_service">Services</string>
    <string name="app_no_service">No services</string>
    <string name="app_orientation">Orientation</string>
    <string name="app_softInput">Soft input mode</string>
    <string name="app_flags">Flags</string>
    <string name="app_grant_uri_permission">Grant URI permissions</string>
    <string name="app_path_permissions">Path permissions</string>
    <string name="app_read">Read</string>
    <string name="app_write">Write</string>
    <string name="app_patterns_allowed">Patterns allowed</string>
    <string name="app_declared_premission">Permissions</string>
    <string name="app_shared_libs">Shared libs</string>
    <string name="app_group">Group</string>
    <string name="app_protection_level">Protection level</string>
    <string name="app_uses_feature">Uses features</string>
    <string name="app_gles_ver">Req. Gles ver.</string>
    <string name="app_no_feature">No features</string>
    <string name="app_shared_user_id">Shared user id</string>
    <string name="app_signatures">Signatures</string>
    <string name="app_no_signatures">No signatures</string>
    <string name="app_configurations">Configurations</string>
    <string name="app_no_configurations">No configurations</string>
    <string name="input_features">Input features</string>
    <string name="app_view_manifest">View Manifest file</string>
    <string name="app_view_exodus">ClassyShark3xodus ?</string>
    <string name="app_view_exodus2">ClassyShark unleashed ?</string>
    <string name="app_manifest">Manifest</string>
    <string name="app_error">Error</string>
    <string name="app_is_loading">Loading &#8230;</string>
    <string name="app_package_name">Name</string>
    <string name="app_package_string">Package</string>
    <string name="app_system_user">System/User</string>
    <string name="app_size">Size</string>
    <string name="app_sdk">Sdk</string>
    <string name="app_netstats_received">Data received</string>
    <string name="app_netstats_transmitted">Data transmitted</string>
    <string name="app_netstats_msg">* Data transmitted since last boot</string>
    <string name="app_about">About</string>
    <string name="app_about_message">red:noAllowClearUserData\nmagenta:Persistent\nblue:Stopped\norangeDate:READ_LOGS\norangeUid:shared\ngreen:Inactive\n(+Oreo>orangeSdk:usesCleartextTraffic)\n\nX:Multiarch\n0:noHasCode\n_:noHardwareAccelerated\n°:Suspended\n~:TestOnly\n\n#(2ndScreen Shared_uid orange):dalvikLargeHeap\n\n2-clicks on UsesPermissions >> toastInfo\n\ncode: <a>https://bitbucket.org/oF2pks/fdroid-applications-info</a>\nprim-origin: <a>https://github.com/MajeurAndroid/Applications-Info</a></string>
    <string name="app_size_details">Size details</string>
    <string name="app_location_internal">Internal</string>
    <string name="app_location_external">External</string>
    <string name="app_code_size">Code (apk file)</string>
    <string name="app_data_size">Data</string>
    <string name="app_cache_size">Cache</string>
    <string name="app_obb_size">Obb</string>
    <string name="app_media_size">Media</string>
    <string name="app_not_installed">Application not installed</string>
    <string name="app_system">System</string>
    <string name="app_system_u">System UPDATED</string>
    <string name="app_user">User</string>
    <string name="app_sort">Sort</string>
    <string name="app_title_section_all">All activities</string>
    <string name="app_title_dialog_disclaimer">Disclaimer</string>
    <string name="app_title_dialog_icon_picker">Pick an icon</string>
    <string name="app_dialog_progress_loading">Loading…</string>
    <string name="app_dialog_disclaimer">Use this software at your own risk. Some apps might not behave as expected when their activities are launched in the wrong context leading to data loss or even worse. You have been warned. Do you understand this and still want to use this software?</string>
    <string name="app_context_action_launch">Launch activity</string>
    <string name="app_context_action_shortcut">Create shortcut</string>
    <string name="app_context_action_edit">Edit shortcut</string>
    <string name="app_label_name">Name</string>
    <string name="app_label_package">Package</string>
    <string name="app_label_class">Class</string>
    <string name="app_label_icon">Icon</string>
    <string name="app_starting_activity">Starting activity: %s</string>
    <string name="app_starting_application">Starting application: %s</string>
    <string name="app_creating_activity_shortcut">Creating activity shortcut for %s</string>
    <string name="app_creating_application_shortcut">Creating application shortcut for %s</string>
    <string name="app_error_tasks">Error loading task list</string>
    <string name="app_error_creating_shortcut">Error creating shortcut</string>
    <string name="app_error_icons">Error loading icons</string>
    <string name="app_error_invalid_icon_resource">Error: invalid icon resource</string>
    <string name="app_error_invalid_icon_format">Error: invalid icon format</string>
    <string name="app_error_verbose_pin_shortcut">Current launcher does not support "PinShortcut". Unable to create shortcut.</string>
    <string name="action_view_source">View Sourcecode</string>
</resources>